@@ -17,8 +17,8 @@ android {
 
     defaultConfig {
         applicationId = "com.aya.digital.healthapp.patient"
-        versionCode = 25
-        versionName = "0.0.25" // X.Y.Z; X = Major, Y = minor, Z = Patch level
+        versionCode = 26
+        versionName = "0.0.26" // X.Y.Z; X = Major, Y = minor, Z = Patch level
 
         testInstrumentationRunner = "androidx.test.runner.AndroidJUnitRunner"
     }
